fixed the problem of overflow in login/forgotpwd page for smaller devices

--- a/frontend/src/styles/components/ForgotPasswordPage.css
+++ b/frontend/src/styles/components/ForgotPasswordPage.css
@@ -1,3 +1,8 @@
+* {
+  overflow: hidden;
+  -webkit-tap-highlight-color: transparent;
+}
+
 .forgotpwd {
   position: relative;
   min-height: 100vh;
@@ -197,6 +202,10 @@
   left: 50%;
   z-index: 1;
   position: absolute;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
 
 .forgotpwd__footerIcon:hover .tooltip-text {
