--- a/frontend/src/styles/components/LoginOrSignUp.css
+++ b/frontend/src/styles/components/LoginOrSignUp.css
@@ -1,3 +1,8 @@
+* {
+  overflow: hidden;
+  -webkit-tap-highlight-color: transparent;
+}
+
 .loginSignup {
   position: relative;
   min-height: 100vh;
